# mangadex-bot

./: Cargo.toml  Dockerfile
src/: db.rs  main.rs  mangadex.rs  scan.rs
src/commands/: mod.rs  track.rs
src/discord/: mod.rs
src/discord/command/: mod.rs  track.rs
