[package]
name = "mangadex-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "2.3.1"
mongodb = "2.4.0"
bson = "2.6.1"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"

[dependencies.clap]
version = "4.2.1"
features = ["derive", "env"]

[dependencies.reqwest]
version = "0.11"
default_features = false
features = ["json", "rustls-tls"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.serenity]
version = "0.11"
default_features = false
features = [
    "builder",
    "client",
    "gateway",
    "rustls_backend",
    "model",
]

[dependencies.tokio]
version = "1.0"
features = ["macros", "rt-multi-thread"]
